--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+axis-horizontal,
+.carousel-root {
+    height: 18rem;
+}
+
+.slider,
+.carousel-slider {
+    height: 100%;
+}
+
+.carousel .slider-wrapper {
+    height: 100%;
+}
