--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -245,3 +245,8 @@ axis-horizontal,
     background: #6b6b6b;
     border-radius: 20px;
 }
+
+.go2072408551 {
+    width: 100%;
+    padding: 0 !important;
+}
