--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,6 +142,8 @@ axis-horizontal,
 
 }
 
+
+
 .userlist::-webkit-scrollbar-track {
     background: #3e3b3bc5;
     border-radius: 0px 20px 20px 0px;
@@ -217,6 +219,16 @@ axis-horizontal,
 
 ::-webkit-scrollbar {
     width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #171717;
+
+}
+
+::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 20px;
 }
 
 .MessageForm:empty::before {
